# mcw-sphinx-theme

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst
src/wabi_sphinx_theme/: __init__.py  layout.html  pygments_style.py  theme.conf
src/wabi_sphinx_theme/static/css/: wabi.css
src/wabi_sphinx_theme/templates/: layout.html
tests/: __init__.py  conftest.py  test_build.py  test_theme.py
