[project]
name = "wabi-sphinx-theme"
version = "0.1.0"
description = "A warm, minimal Sphinx theme matching the Wabi Hugo theme - cream, sand, terracotta aesthetic"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Will McGinnis", email = "will@mcginniscommawill.com"}
]
keywords = ["sphinx", "theme", "documentation", "wabi", "minimal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]
requires-python = ">=3.9"
dependencies = [
    "sphinx>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "sphinx-autobuild",
    "myst-parser",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx-autobuild",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/wdm0006/wabi-sphinx-theme"
Documentation = "https://mcginniscommawill.com"
Repository = "https://github.com/wdm0006/wabi-sphinx-theme"
Issues = "https://github.com/wdm0006/wabi-sphinx-theme/issues"
Changelog = "https://github.com/wdm0006/wabi-sphinx-theme/blob/main/CHANGELOG.md"

[project.entry-points."sphinx.html_themes"]
wabi_sphinx_theme = "wabi_sphinx_theme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wabi_sphinx_theme"]

[dependency-groups]
dev = [
    "sphinx-autobuild",
    "myst-parser",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "twine>=5.0.0",
]

# ===== Ruff Configuration =====
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["wabi_sphinx_theme"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"docs/conf.py" = ["ERA001"]  # Allow commented code in conf.py
"src/wabi_sphinx_theme/pygments_style.py" = ["RUF012"]  # Pygments styles dict pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ===== Pytest Configuration =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=wabi_sphinx_theme",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ===== Coverage Configuration =====
[tool.coverage.run]
source = ["src/wabi_sphinx_theme"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ===== MyPy Configuration =====
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for Sphinx extension compatibility
ignore_missing_imports = true
exclude = [
    "docs/",
    "build/",
]
